# SegKD

./: .gitignore  README.md  main.py  pyproject.toml  train_colab.ipynb  u-net-distillation.ipynb  u-net-pp_training.ipynb  u-net_training.ipynb
src/: dataset.py  losses.py  metrics.py  models.py  train.py
